--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -82,7 +82,7 @@ header nav .nav-hamburger button {
   border: 0;
   border-radius: 0;
   padding: 0;
-  background-color: var(--background-color);
+  background-color: ;
   color: inherit;
   overflow: initial;
   text-overflow: initial;
@@ -166,7 +166,7 @@ header nav .nav-sections {
   flex: 1 1 auto;
   display: none;
   visibility: hidden;
-  background-color: var(--overlay-color);
+  background-color: #f7c20d;
 }
 
 header nav[aria-expanded=true] .nav-sections {
