--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
   --c-nav: 50%;
   --c-nav-hover: 75%;
   --c-alpha: var(--c-nav);
-  --c-login: #39748c;
+  --c-login: #d7492c;
   --c-white: #fff;
   --c-grey: #4b4e53;
 }
